# static-ghost

./: README.md  package.json  pyproject.toml
static_ghost/: cli.py  detector.py  fast_inpaint.py  inpainter.py  mask_generator.py  picker.py  video_engine.py
static_ghost.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_cli.py  test_detector.py  test_fast_inpaint.py  test_inpainter.py  test_mask_generator.py  test_picker.py  test_video_engine.py
