[project]
name = "static-ghost"
version = "0.1.0"
description = "Remove static watermarks from videos using LaMa inpainting"
requires-python = ">=3.9"
dependencies = [
    "opencv-python-headless>=4.8",
    "numpy>=1.26",
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
static-ghost = "static_ghost.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
