[project]
name = "static-ghost"
version = "0.4.0"
description = "Remove static watermarks from videos using LaMa inpainting"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "redredchen01"},
]
keywords = ["video", "watermark", "removal", "inpainting", "lama", "ffmpeg", "iopaint"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "opencv-python-headless>=4.8",
    "numpy>=1.26",
    "Pillow>=10.0",
]

[project.urls]
Homepage = "https://github.com/redredchen01/static-ghost"
Repository = "https://github.com/redredchen01/static-ghost"
Issues = "https://github.com/redredchen01/static-ghost/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
static-ghost = "static_ghost.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
